--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Programmer's site</title>
+    <title>CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rafael de Mello">
+    <meta name="author" content="Vitaliy Medvedev">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <script src="/js/bootstrap.min.js"></script>
@@ -18,34 +17,32 @@
     <div class="container well">
         <div class="row">
             <div class="span12">
-                <div id="photo"><img src="img/user.png" width="186px"></div>
+                <div id="photo"><img src="img/z_d31a2767.jpg" width="186px"></div>
                 <div id="data">
                     <table class="table">
                       <tbody>
                         <tr>
                           <td><h3>Birth</h3></td>
-                          <td>05 June 1984</td>
+                          <td>10 September 1987</td>
                         </tr>
                         <tr>
                           <td><h3>Address</h3></td>
-                          <td>150 5th Avenue, NY</td>
+                          <td>Saint-Petersburg</td>
                         </tr>
                         <tr>
                           <td><h3>Phone</h3></td>
-                          <td>15 3333-8854</td>
+                          <td>+7-911-267-1731</td>
                         </tr>
                         <tr>
                           <td><h3>Mail</h3></td>
-                          <td>contato@ficticio.com</td>
+                          <td>medvedev.vs@gmail.com</td>
                         </tr>
                       </tbody>
                     </table>
                 </div>
                 <div id="social">
-                    <a href="#" class="tooltip-test" data-original-title="Facebook"><img src="img/facebook.png"></a>
-                    <a href="#" class="tooltip-test" data-original-title="Google +"><img src="img/google.png"></a>
-                    <a href="#" class="tooltip-test" data-original-title="Twitter"><img src="img/twitter.png"></a>
-                    <a href="#" class="tooltip-test" data-original-title="Youtube"><img src="img/youtube.png"></a>
+                    <a href="https://www.facebook.com/imevs87" class="tooltip-test" data-original-title="Facebook"><img src="img/facebook.png"></a>
+                    <a href="http://twitter.com/imevs" class="tooltip-test" data-original-title="Twitter"><img src="img/twitter.png"></a>
               </div>
             </div>
         </div>
@@ -54,7 +51,7 @@
     <div class="container well">
         <div class="row">
             <div class="span12">
-                <h1 class="pull-right"><a href="/">Resume</a> | <a href="/portfolio">Portfolio</a> </h1>
+                <h1 class="pull-right"><a href="/">Resume</a> </h1>
             </div>
         </div>
     </div>
