update my profile

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -212,7 +212,7 @@
 <hr>
 <div class="row">
     <div class="span4">
-        <h2>Образование</h2>
+        <h2>Education</h2>
     </div>
     <div class="span8">
         <h3>Оренбургский государственный университет</h3>
